/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'application'
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://repo1.maven.org/maven2/')
    }

    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
}

dependencies {
    api 'com.amazonaws:aws-java-sdk-bundle:1.12.262'
    api 'com.google.guava:guava:32.1.3-jre'
    api 'io.minio:minio:8.5.7'
    api 'io.reactivex:rxjava:1.3.8'
    api 'org.apache.arrow:flight-sql-jdbc-driver:16.1.0'
    api 'org.apache.hadoop:hadoop-aws:3.3.4'
    api 'org.apache.hadoop:hadoop-client:3.3.4'
    api 'org.apache.hadoop:hadoop-common:3.3.4'
    api 'org.apache.iceberg:iceberg-aws:1.4.3'
    api 'org.apache.iceberg:iceberg-spark-runtime-3.5_2.13:1.4.2'
    api 'org.apache.parquet:parquet-hadoop:1.13.1'
    api 'org.apache.spark:spark-core_2.13:3.5.1'
    api 'org.apache.spark:spark-sql_2.13:3.5.0'
    api 'org.springframework.boot:spring-boot-starter-web:3.2.2'
    api 'org.testcontainers:testcontainers:1.19.1'
    api 'software.amazon.awssdk:bundle:2.17.100'

}
configurations {
    all {
        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
    }
}


group = 'org.example'
version = '1.0-SNAPSHOT'
description = 'iceberg-examples'
java.sourceCompatibility = JavaVersion.VERSION_1_8

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}
application {
    applicationDefaultJvmArgs = [
            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
    ]
}
task runWithArgs(type: JavaExec) {
    mainClass = 'ParquetToS3'
    classpath = sourceSets.main.runtimeClasspath
    jvmArgs = [
            '--add-exports', 'jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
    ]
}
